Sat Oct 30 15:24:41 2004  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE_TYPELIB class. add 
	  WIN32OLE#ole_typelib method.

	* ext/win32ole/tests/testOLETYPELIB.rb: add WIN32OLE_TYPELIB class.

Fri Oct 29 21:27:51 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_check_initialized): new function to check uninitialized
	  object.  [ruby-talk:118234]

	* file.c (rb_file_path), io.c (rb_io_closed): check if initialized.

Fri Oct 29 19:05:33 2004  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf: follow nkf2.0.

Fri Oct 29 17:18:22 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y (ripper_s_allocate): add prototype for Microsoft compiler.

	* range.c (range_step, range_each): need cast.

Fri Oct 29 11:35:04 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_parser_append_print, rb_parser_while_loop): body node
	  can be empty.  [ruby-dev:24628]

Fri Oct 29 10:00:30 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_start_0): forget to free some memory chunks.
	  [ruby-core:03611]

	* eval.c (ruby_cleanup): ruby_finalize_1 may cause exception,
	  should be wrapped by PUSH_TAG/POP_TAG().  [ruby-dev:24627]

Wed Oct 27 09:17:30 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_gsub): use a string object for exception safeness.
	  [ruby-dev:24601]

Wed Oct 27 07:38:55 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* node.h (NODE_TYPESHIFT): allow 4 more bits for line numbers.
	  [ruby-talk:117841]

	* ruby.h (FL_ABLE): nodes are not subject for flag operations.

	* io.c (ARGF_FORWARD): should have specified argv explicitly,
	  since we no longer have frame->argv saved.  [ruby-dev:24602]

Tue Oct 26 23:30:39 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/code_objects.rb (RDoc::Context::add_class_or_module):
	  Restore correct :nopdoc: behavior with nested classes and modules.

Tue Oct 26 18:21:29 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
